--- a/Proyecto2/nbproject/private/private.properties
+++ b/Proyecto2/nbproject/private/private.properties
@@ -5,4 +5,4 @@ do.jlink=false
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=C:\\Users\\Juley\\AppData\\Roaming\\NetBeans\\12.4\\build.properties
+user.properties.file=C:\\Users\\Javier\\AppData\\Roaming\\NetBeans\\12.4\\build.properties
