--- a/Proyecto2/nbproject/project.properties
+++ b/Proyecto2/nbproject/project.properties
@@ -73,7 +73,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Proyecto2
-main.class=proyecto2.Proyecto2
+main.class=AppServidora.vista.mainServer
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
